# gym-schedule

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.MD  docker-compose.yml
migrations/2019-12-01-142156_create_training/: down.sql  up.sql
migrations/2020-01-04-222554_create_muscle_tag/: down.sql  up.sql
migrations/2020-01-05-144621_create_exercices/: up.sql
src/: database.rs  handler.rs  main.rs  pagination.rs  schema.rs
src/api/: mod.rs  trainings.rs
src/config/: db_config.rs
src/db/: mod.rs  trainings.rs
src/models/: commons.rs  mod.rs  models.rs  trainings.rs
