[package]
name = "gym-schedule"
version = "0.1.0"
authors = ["BoudBoud47 <mehdi.boudart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
listenfd = "0.3"
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
r2d2 = "0.8"
dotenv = "0.15.0"
serde = "1.0.103"
serde_json = "1.0.42"
serde_derive = "1.0.103"
chrono = "0.4.10"
uuid = { version = "0.7.0", features = ["serde", "v4"] }
log = "0.4.0"
env_logger = "0.7.1"
futures = "0.1.29"